--- a/AdHoc/res/values/styles.xml
+++ b/AdHoc/res/values/styles.xml
@@ -37,4 +37,10 @@
         <item name="android:paddingLeft">5dp</item>
         <item name="android:gravity">center</item>
     </style>
+    
+    <style name="custom_progress_bar" parent="android:Widget.ProgressBar.Horizontal">
+        <item name="android:minHeight">10dip</item>
+        <item name="android:maxHeight">10dip</item>
+        <item name="android:progressDrawable">@drawable/custom_progress_bar_horizontal</item>
+    </style>
 </resources>
