--- a/AdHoc/res/layout/activity_event_list.xml
+++ b/AdHoc/res/layout/activity_event_list.xml
@@ -2,8 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EventListActivity"
-    android:background="#228B22" >
+    tools:context=".EventListActivity">
 
     <FrameLayout
         android:id="@+id/flEventList"
