--- a/AdHoc/res/layout/fragment_item_event.xml
+++ b/AdHoc/res/layout/fragment_item_event.xml
@@ -1,19 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin">
+    android:layout_height="match_parent" >
 
     <RelativeLayout
+        android:id="@+id/rlListContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#000000"
-        android:padding="1dp">
+        android:paddingBottom="@dimen/activity_vertical_small_margin"
+        android:paddingLeft="@dimen/activity_horizontal_small_margin"
+        android:paddingRight="@dimen/activity_horizontal_small_margin"
+        android:paddingTop="@dimen/activity_vertical_small_margin" >
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#FFFFFF" >
+            android:id="@+id/rlStatusIcon"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true" >
+
+            <TextView
+                android:id="@+id/tvHostedOrJoined"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/ivStatus"
+                android:text="HOST" />
+
+            <ImageView
+                android:id="@+id/ivStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:src="@drawable/ic_star" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rlAttendance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true" >
+
+            <ProgressBar
+                android:id="@+id/pbAttendeeBar"
+                style="@+style/Widget.ProgressBar.Vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true" />
+
+            <TextView
+                android:id="@+id/tvListMaxAttendees"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:text="0" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rlContent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/rlStatusIcon" >
 
             <TextView
                 android:id="@+id/tvLoginTitle"
@@ -25,31 +77,23 @@
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <TextView
-                android:id="@+id/tvHostedOrJoined"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_below="@+id/tvDescription"
-                android:text="" />
-
-            <TextView
                 android:id="@+id/tvStartTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
+                android:layout_alignLeft="@+id/tvLoginTitle"
                 android:layout_below="@+id/tvLoginTitle"
                 android:text="Regular Text" />
-
-            <TextView
-                android:id="@+id/tvListMaxAttendees"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/tvStartTime"
-                android:layout_alignBottom="@+id/tvStartTime"
-                android:layout_toRightOf="@+id/tvStartTime"
-                android:text="Regular Text" />
-
         </RelativeLayout>
     </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/ivDivider"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/rlListContent"
+        android:src="@drawable/list_divider" />
 
 </RelativeLayout>
