-change layout of login page match suggestions

--- a/AdHoc/res/layout/activity_create_event.xml
+++ b/AdHoc/res/layout/activity_create_event.xml
@@ -22,11 +22,12 @@
 
     <Button
         android:id="@+id/btnSave"
-        android:onClick="clickSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:onClick="clickSave"
         android:text="@string/save" />
     
     <LinearLayout
