--- a/AdHoc/res/layout/activity_login.xml
+++ b/AdHoc/res/layout/activity_login.xml
@@ -30,10 +30,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:drawableLeft="@drawable/ic_twitter_icon"
         android:drawablePadding="10dp"
-        android:layout_marginBottom="10dp"
         android:onClick="loginWithParse"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
