--- a/AdHoc/res/values/styles_adhocactionbar.xml
+++ b/AdHoc/res/values/styles_adhocactionbar.xml
@@ -19,62 +19,62 @@
 
 <resources>
 
-    <style name="Theme.Adhocactionbar" parent="@style/Theme.Base.AppCompat.Light">
-        <item name="android:actionBarItemBackground">@drawable/selectable_background_adhocactionbar</item>
-        <item name="android:popupMenuStyle">@style/PopupMenu.Adhocactionbar</item>
-        <item name="android:dropDownListViewStyle">@style/DropDownListView.Adhocactionbar</item>
-        <item name="android:actionBarTabStyle">@style/ActionBarTabStyle.Adhocactionbar</item>
-        <item name="android:actionDropDownStyle">@style/DropDownNav.Adhocactionbar</item>
-        <item name="android:actionBarStyle">@style/ActionBar.Transparent.Adhocactionbar</item>
-        <item name="android:actionModeBackground">@drawable/cab_background_top_adhocactionbar</item>
-        <item name="android:actionModeSplitBackground">@drawable/cab_background_bottom_adhocactionbar</item>
-        <item name="android:actionModeCloseButtonStyle">@style/ActionButton.CloseMode.Adhocactionbar</item>
+    <style name="Theme.Adhocactionbar" parent="@style/Theme.AppCompat.Light">
+        <item name="actionBarItemBackground">@drawable/selectable_background_adhocactionbar</item>
+        <item name="popupMenuStyle">@style/PopupMenu.Adhocactionbar</item>
+        <item name="dropDownListViewStyle">@style/DropDownListView.Adhocactionbar</item>
+        <item name="actionBarTabStyle">@style/ActionBarTabStyle.Adhocactionbar</item>
+        <item name="actionDropDownStyle">@style/DropDownNav.Adhocactionbar</item>
+        <item name="actionBarStyle">@style/ActionBar.Solid.Adhocactionbar</item>
+        <item name="actionModeBackground">@drawable/cab_background_top_adhocactionbar</item>
+        <item name="actionModeSplitBackground">@drawable/cab_background_bottom_adhocactionbar</item>
+        <item name="actionModeCloseButtonStyle">@style/ActionButton.CloseMode.Adhocactionbar</item>
+
         
-        
     </style>
 
-    <style name="ActionBar.Solid.Adhocactionbar" parent="@android:style/Widget.Holo.Light.ActionBar.Solid">
-        <item name="android:background">@drawable/ab_solid_adhocactionbar</item>
-        <item name="android:backgroundStacked">@drawable/ab_stacked_solid_adhocactionbar</item>
-        <item name="android:backgroundSplit">@drawable/ab_bottom_solid_adhocactionbar</item>
-        <item name="android:progressBarStyle">@style/ProgressBar.Adhocactionbar</item>
+    <style name="ActionBar.Solid.Adhocactionbar" parent="@style/Widget.AppCompat.Light.ActionBar.Solid">
+        <item name="background">@drawable/ab_solid_adhocactionbar</item>
+        <item name="backgroundStacked">@drawable/ab_stacked_solid_adhocactionbar</item>
+        <item name="backgroundSplit">@drawable/ab_bottom_solid_adhocactionbar</item>
+        <item name="progressBarStyle">@style/ProgressBar.Adhocactionbar</item>
     </style>
 
-    <style name="ActionBar.Transparent.Adhocactionbar" parent="@android:style/Widget.Holo.Light.ActionBar">
-        <item name="android:background">@drawable/ab_transparent_adhocactionbar</item>
-        <item name="android:progressBarStyle">@style/ProgressBar.Adhocactionbar</item>
+    <style name="ActionBar.Transparent.Adhocactionbar" parent="@style/Widget.AppCompat.Light.ActionBar">
+        <item name="background">@drawable/ab_transparent_adhocactionbar</item>
+        <item name="progressBarStyle">@style/ProgressBar.Adhocactionbar</item>
     </style>
-
-    <style name="PopupMenu.Adhocactionbar" parent="@android:style/Widget.Holo.Light.ListPopupWindow">
+	
+    <style name="PopupMenu.Adhocactionbar" parent="@style/Widget.AppCompat.Light.PopupMenu">	
         <item name="android:popupBackground">@drawable/menu_dropdown_panel_adhocactionbar</item>	
     </style>
-
-    <style name="DropDownListView.Adhocactionbar" parent="@android:style/Widget.Holo.Light.ListView.DropDown">
+	
+    <style name="DropDownListView.Adhocactionbar" parent="@style/Widget.AppCompat.Light.ListView.DropDown">
         <item name="android:listSelector">@drawable/selectable_background_adhocactionbar</item>
     </style>
 
-    <style name="ActionBarTabStyle.Adhocactionbar" parent="@android:style/Widget.Holo.Light.ActionBar.TabView">
+    <style name="ActionBarTabStyle.Adhocactionbar" parent="@style/Widget.AppCompat.Light.ActionBar.TabView">
         <item name="android:background">@drawable/tab_indicator_ab_adhocactionbar</item>
     </style>
-
-    <style name="DropDownNav.Adhocactionbar" parent="@android:style/Widget.Holo.Light.Spinner">
+	
+    <style name="DropDownNav.Adhocactionbar" parent="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar">
         <item name="android:background">@drawable/spinner_background_ab_adhocactionbar</item>
         <item name="android:popupBackground">@drawable/menu_dropdown_panel_adhocactionbar</item>
         <item name="android:dropDownSelector">@drawable/selectable_background_adhocactionbar</item>
     </style>
     
-    <style name="ProgressBar.Adhocactionbar" parent="@android:style/Widget.Holo.Light.ProgressBar.Horizontal">
+    <style name="ProgressBar.Adhocactionbar" parent="@style/Widget.AppCompat.ProgressBar.Horizontal">
         <item name="android:progressDrawable">@drawable/progress_horizontal_adhocactionbar</item>
     </style>
     
-    <style name="ActionButton.CloseMode.Adhocactionbar" parent="@android:style/Widget.Holo.Light.ActionButton.CloseMode">
+    <style name="ActionButton.CloseMode.Adhocactionbar" parent="@style/Widget.AppCompat.Light.ActionButton.CloseMode">
         <item name="android:background">@drawable/btn_cab_done_adhocactionbar</item>
     </style>
-
+    
     <!-- this style is only referenced in a Light.DarkActionBar based theme -->
-    <style name="Theme.Adhocactionbar.Widget" parent="@android:style/Theme.Holo">
-        <item name="android:popupMenuStyle">@style/PopupMenu.Adhocactionbar</item>
-        <item name="android:dropDownListViewStyle">@style/DropDownListView.Adhocactionbar</item>
+    <style name="Theme.Adhocactionbar.Widget" parent="@style/Theme.AppCompat">
+        <item name="popupMenuStyle">@style/PopupMenu.Adhocactionbar</item>
+        <item name="dropDownListViewStyle">@style/DropDownListView.Adhocactionbar</item>
     </style>
 
 </resources>
