--- a/AdHoc/res/values/dimens.xml
+++ b/AdHoc/res/values/dimens.xml
@@ -5,5 +5,6 @@
     <dimen name="activity_horizontal_small_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="activity_vertical_small_margin">8dp</dimen>
+    <dimen name="creation_seperator">16dp</dimen>
 
 </resources>
