--- a/AdHoc/res/layout/activity_event_details.xml
+++ b/AdHoc/res/layout/activity_event_details.xml
@@ -13,102 +13,114 @@
         android:layout_alignParentTop="true" />
 
     <RelativeLayout
+        android:layout_below="@+id/fMap"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/fMap"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin" >
 
-        <Button
-            android:id="@+id/btnAction"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:onClick="onAction"
-            android:text="Button" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
 
-        <TextView
-            android:id="@+id/tvInfoAttendance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:text="Large Text"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            <Button
+                android:id="@+id/btnAction"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:onClick="onAction"
+                android:text="Button" />
 
-        <TextView
-            android:id="@+id/tvDetailStartTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/tvInfoAttendance"
-            android:layout_below="@+id/tvInfoAttendance"
-            android:text="TextView" />
+            <TextView
+                android:id="@+id/tvInfoAttendance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:text="Large Text"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
 
-        <TextView
-            android:id="@+id/tvDetailsLoc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/tvDetailStartTime"
-            android:layout_below="@+id/tvDetailStartTime"
-            android:text="TextView" />
+            <TextView
+                android:id="@+id/tvDetailStartTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/tvInfoAttendance"
+                android:layout_below="@+id/tvInfoAttendance"
+                android:text="TextView" />
 
-        <ProgressBar
-            android:id="@+id/pbAttendance"
-            style="@style/custom_progress_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignTop="@+id/tvDetailsAttendance"
-            android:layout_alignBottom="@+id/tvDetailsAttendance"
-             />
+            <TextView
+                android:id="@+id/tvDetailsLoc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/tvDetailStartTime"
+                android:layout_below="@+id/tvDetailStartTime"
+                android:text="TextView" />
 
-        <TextView
-            android:id="@+id/tvDetailsAttendance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tvDetailsLoc"
-            android:layout_centerHorizontal="true"
-            android:text="Small Text"
-            android:textColor="#ffffff"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            <ProgressBar
+                android:id="@+id/pbAttendance"
+                style="@style/custom_progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/tvDetailsAttendance"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignTop="@+id/tvDetailsAttendance" />
 
-        <TextView
-            android:id="@+id/tvInfoTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:text="TextView" />
+            <TextView
+                android:id="@+id/tvDetailsAttendance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvDetailsLoc"
+                android:layout_centerHorizontal="true"
+                android:text="Small Text"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="#ffffff" />
 
-        <TextView
-            android:id="@+id/tvDetailDesc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/tvDetailsAttendance"
-            android:layout_marginTop="17dp"
-            android:text="TextView" />
+            <TextView
+                android:id="@+id/tvDetailDesc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/tvDetailsAttendance"
+                android:layout_marginTop="17dp"
+                android:text="TextView" />
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/tvDetailsLoc"
-            android:layout_toRightOf="@+id/tvDetailStartTime"
-            android:text=" to "
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/tvDetailsLoc"
+                android:layout_toRightOf="@+id/tvDetailStartTime"
+                android:text=" to "
+                android:textAppearance="?android:attr/textAppearanceSmall" />
 
-        <TextView
-            android:id="@+id/tvDetailEndTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/tvDetailsLoc"
-            android:layout_toRightOf="@+id/textView7"
-            android:text="TextView" />
+            <TextView
+                android:id="@+id/tvDetailEndTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/tvDetailsLoc"
+                android:layout_toRightOf="@+id/textView7"
+                android:text="TextView" />
+
+            <ImageView
+                android:id="@+id/ivDetailStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true" />
+
+            <TextView
+                android:id="@+id/tvInfoTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/tvInfoAttendance"
+                android:text="" />
+
+        </RelativeLayout>
     </RelativeLayout>
 
     <LinearLayout
