--- a/AdHoc/res/layout/activity_create_event.xml
+++ b/AdHoc/res/layout/activity_create_event.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".CreateEventActivity"
-    android:background="#d0e6df" >
+    android:background="#afce7f" >
 
     <FrameLayout
         android:id="@+id/flContainerEvent"
