--- a/AdHoc/res/layout/fragment_create_event_data.xml
+++ b/AdHoc/res/layout/fragment_create_event_data.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CreateEventDataFragment" >
+    tools:context=".CreateEventDataFragment"
+    android:background="#c8eb5d" >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,7 +17,8 @@
                 android:layout_below="@+id/tvStartTime"
                 android:layout_marginTop="10dp"
                 android:text="@string/endTime"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:layout_marginLeft="2dp" />
 
             <EditText
                 android:id="@+id/etStartTime"
@@ -49,7 +51,8 @@
             android:layout_marginTop="@dimen/creation_seperator"
             android:paddingBottom="@dimen/creation_seperator"
             android:text="@string/maxAtt"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_marginLeft="2dp" />
 
         <TextView
             android:id="@+id/tvDescription"
@@ -59,7 +62,8 @@
             android:layout_below="@+id/etLocation"
             android:text="@string/desc"
             android:layout_marginTop="@dimen/creation_seperator"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_marginLeft="2dp" />
 
         <EditText
             android:id="@+id/etDescription"
@@ -94,7 +98,8 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:text="@string/chooseSport"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_marginLeft="2dp" />
 
         <com.codepath.adhoc.CustomEventSpinner
             android:id="@+id/spListEvents"
@@ -115,7 +120,8 @@
             android:layout_below="@+id/tvStopTime"
             android:text="@string/locationCreate"
             android:layout_marginTop="@dimen/creation_seperator"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_marginLeft="2dp" />
 
         <TextView
             android:id="@+id/tvStartTime"
@@ -125,7 +131,8 @@
             android:layout_below="@+id/etMaxAttendees"
             android:text="@string/startTime"
             android:layout_marginTop="@dimen/creation_seperator"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_marginLeft="2dp" />
 
         <EditText
             android:id="@+id/etEndTime"
