--- a/AdHoc/res/drawable/nice_button.xml
+++ b/AdHoc/res/drawable/nice_button.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <corners android:radius="10dp"/>
-    <stroke android:width="1dp" android:color="#A60000"/>
-    <gradient android:type="linear" android:startColor="#FF7373" android:endColor="#FF0DFF" android:angle="90"/>
-    <padding android:left="4dp" android:top="4dp" android:right="4dp" android:bottom="4dp"/>
+    <corners android:radius="20dp"/>
+    <gradient android:type="linear" android:endColor="#99cc00" android:startColor="#62af0f" android:angle="90"/>
+    <padding android:left="4dp" android:top="2dp" android:right="4dp" android:bottom="2dp"/>
 
 </shape>
