--- a/AdHoc/res/layout/activity_event_details.xml
+++ b/AdHoc/res/layout/activity_event_details.xml
@@ -27,6 +27,7 @@
 
             <Button
                 android:id="@+id/btnAction"
+                style="@style/NiceButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
