--- a/AdHoc/res/values-v14/styles_adhocactionbar.xml
+++ b/AdHoc/res/values-v14/styles_adhocactionbar.xml
@@ -18,6 +18,11 @@
 -->
 
 <resources>
+    
+    <style name="AppBaseTheme" parent="android:Theme.Holo.Light.DarkActionBar">
+        <!-- API 14 theme customizations can go here. -->
+        <item name="android:buttonStyle">@style/NiceButton</item>
+    </style>
 
     <style name="Theme.Adhocactionbar" parent="@style/Theme.AppCompat.Light">
         <item name="android:actionBarItemBackground">@drawable/selectable_background_adhocactionbar</item>
