--- a/AdHoc/res/drawable/states_nice_button.xml
+++ b/AdHoc/res/drawable/states_nice_button.xml
@@ -2,5 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:state_pressed="true" android:drawable="@drawable/nice_button_pressed"></item>
     <item android:state_enabled="true" android:state_pressed="false" android:drawable="@drawable/nice_button"></item>
-
+	<item android:state_enabled="false" android:state_pressed="false" android:drawable="@drawable/nice_button_disabled"></item>
+    
 </selector>
