--- a/AdHoc/res/layout/activity_event_details.xml
+++ b/AdHoc/res/layout/activity_event_details.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#afce7f"
     tools:context=".EventDetailsActivity" >
 
     <fragment
@@ -13,9 +14,9 @@
         android:layout_alignParentTop="true" />
 
     <RelativeLayout
-        android:layout_below="@+id/fMap"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/fMap"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -23,7 +24,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent"
+            android:background="#c8eb5d" >
 
             <Button
                 android:id="@+id/btnAction"
@@ -120,7 +122,6 @@
                 android:layout_alignParentRight="true"
                 android:layout_below="@+id/tvInfoAttendance"
                 android:text="" />
-
         </RelativeLayout>
     </RelativeLayout>
 
