--- a/AdHoc/res/values/integer.xml
+++ b/AdHoc/res/values/integer.xml
@@ -2,4 +2,5 @@
 <resources>
     <integer name="card_flip_time_full">300</integer>
     <integer name="card_flip_time_half">150</integer>
+    <integer name="fade_time">500</integer>
 </resources>
